add-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: add-app-deployment
spec:
  replicas: 10
  selector:
    matchLabels:
      app: add-app
  template:
    metadata:
      labels:
        app: add-app
    spec:
      containers:
        - name: add-app-container
          image: docker.io/abhijarvis/mini:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /healthz
              port: 80
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /healthz
              port: 80
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 3
          resources:
            limits:
              cpu: "500m"
              memory: "128Mi"
            requests:
              cpu: "250m"
              memory: "64Mi"
      restartPolicy: Always
