add-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: add-app-service
spec:
  type: LoadBalancer
  selector:
    app: add-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
